--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "types": "dist/index.d.ts",
   "files": [
     "dist",
-    "src",
+    "LICENSE",
     "README.md"
   ],
   "scripts": {
@@ -19,19 +19,17 @@
     "react",
     "offline",
     "banner",
-    "offline-banner",
+    "network",
     "react-component",
     "typescript"
   ],
   "author": "Morenikeji Ajisegiri",
-  "license": "ISC",
-  "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0"
+  "license": "MIT",
+  "peerDependencies": {
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0"
   },
   "devDependencies": {
-    "@types/css-modules": "^1.0.5",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "tsup": "^8.5.0",
