--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-network-banner",
   "version": "1.0.9",
-  "description": "A lightweight React component and hook to monitor network connectivity and display a banner UI when your app goes offline, has poor network, or comes back online.",
+  "description": "A lightweight React component and hook to monitor network connectivity and display a banner UI when your app goes offline, or comes back online.",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
