--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force"
   },
-  "include": ["src"],
+  "include": ["src", "global.d.ts"],
   "exclude": ["node_modules", "dist", "demo"]
 }
